<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LTDD W06 Dialog - Kien - Thien</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog1">Dialog #1</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="dialog2">Dialog #2</string>
    <string-array name="color">
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
    </string-array>
    <string name="pick_color">Pick Color</string>
    <string name="dialog3">Dialog #3</string>
    <string name="dialog4">Dialog #4</string>
    <string name="pick_foods">Pick Foods</string>
    <string-array name="foods">
        <item >Chicken</item>
        <item >Pig</item>
        <item >Beef</item>
    </string-array>
    <string name="username">User : </string>
    <string name="password">Password : </string>
    <string name="password_hint">Input Password</string>
    <string name="user_hint">Input User Name</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    

</resources>