<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/dialog1" />

    <TextView
        android:id="@+id/dialog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog1"
        android:onClick="onButton2Clicked"
        android:text="@string/dialog2" />

    <TextView
        android:id="@+id/dialog2_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog2_result"
        android:onClick="onButton3Clicked"
        android:text="@string/dialog3" />

    <TextView
        android:id="@+id/dialog3_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/button4"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog3_result"
        android:onClick="onButton4Clicked"
        android:text="@string/dialog4" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:background="?android:attr/detailsElementBackground" >
    </FrameLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_button"
        android:layout_alignBottom="@+id/cancel_button"
        android:layout_alignRight="@+id/container"
        android:text="@string/login" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_toLeftOf="@+id/login_button"
        android:text="@string/cancel" />

</RelativeLayout>